# langchain-openai-py

./: .gitignore  README.md
1. celebritySearch/: main.py
1.footballPlayerSearch/: main.ipynb  pyproject.toml  requirements.txt
celebritySearch/: pyproject.toml
